Here's the commented version of the code:

```c++
#!/usr/bin/env ruby

# Copyright 2015 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

# Require common end-to-end test functionality
require_relative './end2end_common'

# Controller class for handling client-side signal operations in gRPC tests
class SigHandlingClientController < ClientControl::ClientController::Service
  # Initialize with a gRPC stub for making requests
  def initialize(stub)
    @stub = stub  # Store the gRPC stub for later use
  end

  # Performs an echo RPC call and verifies the response matches the request
  # @param req [Object] The request object containing the message to echo
  # @param _ [Object] Unused parameter (convention for gRPC methods)
  # @return [ClientControl::Void] Empty response object
  def do_echo_rpc(req, _)
    # Make echo request to server using stored stub
    response = @stub.echo(Echo::EchoRequest.new(request: req.request))
    # Verify the response matches what we sent
    fail 'bad response' unless response.response == req.request
    # Return empty response
    ClientControl::Void.new
  end
end

# Main execution method
def main
  # Initialize port variables
  parent_controller_port = ''
  server_port = ''
  
  # Parse command line options for ports
  OptionParser.new do |opts|
    opts.on('--parent_controller_port=P', String) do |p|
      parent_controller_port = p  # Set parent controller port from argument
    end
    opts.on('--server_port=P', String) do |p|
      server_port = p  # Set server port from argument
    end
  end.parse!

  # Create a new gRPC test server
  srv = new_rpc_server_for_testing
  # Add insecure HTTP/2 port (random port chosen by system with '0')
  port = srv.add_http2_port('localhost:0',
                            :this_port_is_insecure)
  # Create stub for communicating with echo server
  stub = Echo::EchoServer::Stub.new("localhost:#{server_port}",
                                    :this_channel_is_insecure)
  # Create controller service instance with the stub
  control_service = SigHandlingClientController.new(stub)
  # Register the controller service with the server
  srv.handle(control_service)
  
  # Start server in a new thread that runs until interrupted
  server_thread = Thread.new do
    srv.run_till_terminated_or_interrupted(['int'])  # Responds to INT signal
  end
  # Wait until server is fully running
  srv.wait_till_running

  # Report the allocated port back to parent process
  report_controller_port_to_parent(parent_controller_port, port)
  # Wait for server thread to complete
  server_thread.join
end

# Execute main function
main
```

Key improvements in the comments:
1. Added class-level documentation explaining the purpose of SigHandlingClientController
2. Added method-level documentation for all methods
3. Added inline comments explaining key operations and parameters
4. Clarified the purpose of command-line arguments
5. Explained the server setup and threading behavior
6. Noted important details like port selection and security settings
7. Maintained all original copyright and license information

The comments now provide a clear understanding of:
- The overall purpose of the code (gRPC signal handling test client)
- How the different components interact
- The flow of execution
- Important implementation details
- Parameter and return value explanations