Here's the commented version of the code:

```ruby
#!/usr/bin/env ruby

# Copyright 2015 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

# Require common end-to-end test functionality
require_relative './end2end_common'

# Controller class for handling client signals and RPCs during end-to-end tests
class SigHandlingClientController < ClientControl::ClientController::Service
  # Initialize with a server instance and a stub for making RPC calls
  def initialize(srv, stub)
    @srv = srv      # Reference to the gRPC server
    @stub = stub    # Client stub for making RPC calls
  end

  # Handles echo RPC requests from the test controller
  # @param req [Object] The request object containing message to echo
  # @param _ [Object] Unused call parameter (standard gRPC pattern)
  # @return [ClientControl::Void] Empty response object
  def do_echo_rpc(req, _)
    # Make echo request to server and verify response matches
    response = @stub.echo(Echo::EchoRequest.new(request: req.request))
    # Validate the response matches what we sent
    fail 'bad response' unless response.response == req.request
    ClientControl::Void.new  # Return empty response
  end

  # Shutdown the server in a separate thread
  # @param _ [Object] Unused request parameter
  # @param _ [Object] Unused call parameter
  # @return [ClientControl::Void] Empty response object
  def shutdown(_, _)
    # Create a thread to stop the server asynchronously
    @shutdown_thread = Thread.new do
      @srv.stop
    end
    ClientControl::Void.new  # Return empty response
  end

  # Wait for the shutdown thread to complete
  def join_shutdown_thread
    @shutdown_thread.join
  end
end

# Main entry point for the test client
def main
  # Initialize port variables
  parent_controller_port = ''
  server_port = ''
  
  # Parse command line arguments
  OptionParser.new do |opts|
    opts.on('--parent_controller_port=P', String) do |p|
      parent_controller_port = p  # Port for parent controller communication
    end
    opts.on('--server_port=P', String) do |p|
      server_port = p  # Port of the server to test against
    end
  end.parse!

  # Create a new test RPC server with 3 second poll period
  srv = new_rpc_server_for_testing(poll_period: 3)
  # Add insecure HTTP/2 port (port 0 means auto-select available port)
  port = srv.add_http2_port('localhost:0',
                            :this_port_is_insecure)
  # Create client stub for echo service
  stub = Echo::EchoServer::Stub.new("localhost:#{server_port}",
                                    :this_channel_is_insecure)
  # Create controller service instance
  control_service = SigHandlingClientController.new(srv, stub)
  # Register controller service with the server
  srv.handle(control_service)
  
  # Start server in a new thread that runs until interrupted
  server_thread = Thread.new do
    srv.run_till_terminated_or_interrupted(['int'])
  end
  # Wait until server is fully running
  srv.wait_till_running

  # Report our controller port back to parent process
  report_controller_port_to_parent(parent_controller_port, port)
  # Wait for server thread to complete
  server_thread.join
  # Ensure shutdown thread completes if it was started
  control_service.join_shutdown_thread
end

# Execute main function
main
```

Key improvements in the comments:
1. Added class-level documentation explaining the purpose of SigHandlingClientController
2. Added method documentation for all methods including parameters and return values
3. Explained the purpose of instance variables
4. Clarified the flow of the main function
5. Added comments about important implementation details (like port 0 meaning auto-select)
6. Explained the purpose of the thread usage
7. Added notes about standard gRPC patterns (like unused parameters)
8. Documented the expected behavior of the echo RPC verification

The comments now provide a clear understanding of:
- The overall architecture
- The purpose of each component
- The flow of control
- Important implementation details
- Expected behaviors and validations