Here's the commented version of the code:

```c++
#!/usr/bin/env ruby

# Copyright 2016 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

# Require common end-to-end test functionality
require_relative './end2end_common'

# Implementation of a sleeping Echo service for testing purposes
class SleepingEchoServerImpl < Echo::EchoServer::Service
  def initialize(received_rpc_callback)
    # Store the callback to be executed when an RPC is received
    @received_rpc_callback = received_rpc_callback
  end

  # Echo RPC implementation that sleeps indefinitely after acknowledging the request
  def echo(echo_req, _)
    # Notify that an RPC has been received
    @received_rpc_callback.call

    # Sleep indefinitely (used to test client behavior during long-running RPCs)
    sleep
    # Return echo response (though this line is never reached due to the sleep)
    Echo::EchoReply.new(response: echo_req.request)
  end
end

# Main test function
def main
  STDERR.puts 'start server'

  # Setup synchronization variables to track RPC receipt
  received_rpc = false
  received_rpc_mu = Mutex.new
  received_rpc_cv = ConditionVariable.new
  
  # Callback that signals when an RPC is received
  received_rpc_callback = proc do
    received_rpc_mu.synchronize do
      received_rpc = true
      received_rpc_cv.signal
    end
  end

  # Create the sleeping echo service implementation
  service_impl = SleepingEchoServerImpl.new(received_rpc_callback)

  # Configure RPC server with no polling and no keep-alive
  rpc_server_args = { poll_period: 0, pool_keep_alive: 0 }
  server_runner = ServerRunner.new(service_impl, rpc_server_args: rpc_server_args)
  
  # Start the server and get its port
  server_port = server_runner.run
  
  STDERR.puts 'start client'
  # Start the client test process
  client_controller = ClientController.new(
    'killed_client_thread_client.rb', server_port)

  # Wait until we receive an RPC (signaled by the callback)
  received_rpc_mu.synchronize do
    received_rpc_cv.wait(received_rpc_mu) until received_rpc
  end

  # Send SIGTERM to the client process
  Process.kill('SIGTERM', client_controller.client_pid)
  STDERR.puts 'sent shutdown'

  # Wait for client to exit, with timeout
  begin
    Timeout.timeout(120) do
      Process.wait(client_controller.client_pid)
    end
  rescue Timeout::Error
    # If client doesn't exit cleanly, force kill it
    STDERR.puts "timeout wait for client pid #{client_controller.client_pid}"
    Process.kill('SIGKILL', client_controller.client_pid)
    Process.wait(client_controller.client_pid)
    STDERR.puts 'killed client child'
    raise 'Timed out waiting for client process. ' \
      'It likely freezes when killed while in the middle of an rpc'
  end

  # Verify client exited due to SIGTERM (signal 15)
  client_exit_code = $CHILD_STATUS
  if client_exit_code.termsig != 15
    fail 'expected client exit from SIGTERM ' \
      "but got child status: #{client_exit_code}"
  end

  # Stop the server
  server_runner.stop
end

main
```

Key aspects explained in the comments:
1. The SleepingEchoServerImpl is a test service that sleeps indefinitely after receiving a request
2. The main test flow:
   - Starts a server with the sleeping echo service
   - Starts a client test process
   - Waits for an RPC to be received
   - Sends SIGTERM to the client while it's in the middle of an RPC
   - Verifies proper client termination
3. Synchronization mechanisms for tracking RPC receipt
4. Timeout handling for client process termination
5. Verification of expected exit conditions

The test appears to be verifying client behavior when interrupted during a long-running RPC call.