Here's the commented version of the code:

```c++
#!/usr/bin/env ruby

# Copyright 2015 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

# Load common end-to-end testing functionality
require_relative './end2end_common'

# Controller class for handling client-side signal handling and RPC operations
class SigHandlingClientController < ClientControl::ClientController::Service
  # Initialize with server and stub references
  # @param srv [GRPC::RpcServer] The RPC server instance
  # @param stub [GRPC::ClientStub] The client stub for making RPC calls
  def initialize(srv, stub)
    @srv = srv
    @stub = stub
  end

  # Performs an echo RPC call and verifies the response matches the request
  # @param req [ClientControl::EchoRequest] The echo request message
  # @param _ [GRPC::ActiveCall] Unused call context
  # @return [ClientControl::Void] Empty response indicating success
  def do_echo_rpc(req, _)
    response = @stub.echo(Echo::EchoRequest.new(request: req.request))
    fail 'bad response' unless response.response == req.request
    ClientControl::Void.new
  end

  # Initiates server shutdown in a separate thread
  # @param _ [ClientControl::Void] Unused request parameter
  # @param _ [GRPC::ActiveCall] Unused call context
  # @return [ClientControl::Void] Empty response indicating shutdown initiated
  def shutdown(_, _)
    @shutdown_thread = Thread.new do
      @srv.stop
    end
    ClientControl::Void.new
  end

  # Waits for the shutdown thread to complete
  def join_shutdown_thread
    @shutdown_thread.join
  end
end

# Main execution method for the client controller
def main
  # Initialize port variables
  parent_controller_port = ''
  server_port = ''
  
  # Parse command line arguments for ports
  OptionParser.new do |opts|
    opts.on('--parent_controller_port=P', String) do |p|
      parent_controller_port = p
    end
    opts.on('--server_port=P', String) do |p|
      server_port = p
    end
  end.parse!

  # Set up signal handlers for graceful shutdown
  Signal.trap('TERM') do
    STDERR.puts 'SIGTERM received'
  end

  Signal.trap('INT') do
    STDERR.puts 'SIGINT received'
  end

  # Create and configure RPC server
  srv = new_rpc_server_for_testing(poll_period: 3)
  # Bind to an available port on localhost
  port = srv.add_http2_port('localhost:0',
                            :this_port_is_insecure)
  # Create client stub for echo service
  stub = Echo::EchoServer::Stub.new("localhost:#{server_port}",
                                    :this_channel_is_insecure)
  # Initialize controller service
  control_service = SigHandlingClientController.new(srv, stub)
  srv.handle(control_service)
  
  # Start server in a new thread
  server_thread = Thread.new do
    srv.run
  end
  srv.wait_till_running

  # Report port information to parent process and wait for completion
  report_controller_port_to_parent(parent_controller_port, port)
  server_thread.join
  control_service.join_shutdown_thread
end

# Execute main function
main
```

Key improvements made:
1. Added class-level documentation explaining the purpose of SigHandlingClientController
2. Added detailed method documentation including parameters and return values
3. Added comments explaining the main execution flow
4. Documented the signal handling setup
5. Explained the server initialization and threading logic
6. Added context for the port binding and client stub creation
7. Maintained all existing functionality while making the code more understandable

The comments follow Ruby conventions and provide clear explanations of both the high-level architecture and implementation details, making the code more maintainable for future developers.